# sort-smart

./: Dockerfile  docker-compose.yml  llm_service.py  main_app.py  pyproject.toml
data/: markham-summary.txt  peel-summary.txt  richmondhill-summary.txt  toronto-summary.txt  vaughan-summary.txt  york-summary.txt
static/: index.html
