[project]
name = "eco-sort-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Your Name",email = "you@example.com"}
]
readme = "README.md"
requires-python = ">=3.12, <3.14"
dependencies = [
    "langchain (>=0.3.19,<0.4.0)",
    "dotenv (>=0.9.9,<0.10.0)",
    "langgraph (>=0.2.76,<0.3.0)",
    "langchain-community (>=0.3.18,<0.4.0)",
    "requests (>=2.32.3,<3.0.0)",
    "fastapi (>=0.115.8,<0.116.0)",
    "openai (>=1.64.0,<2.0.0)",
    "langchain-openai (>=0.3.7,<0.4.0)",
    "python-multipart (>=0.0.20,<0.0.21)",
    "uvicorn (==0.34.2)"
]

[tool.poetry]
packages = [{include = "eco_sort_api", from = "src"}]


[tool.poetry.group.dev.dependencies]
langsmith = "^0.3.11"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
